# rusty-cffi

./: .gitignore  Cargo.toml  cbindgen.toml  py_clean.sh  pyproject.toml
python/rusty_cffi/: __init__.py  config.py  container.py
src/: containers.rs  lib.rs  types.rs
